--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
                         <artifactId>checkstyle</artifactId>
                         <version>6.19</version>
                     </dependency>
+					<dependency>
+						<groupId>org.threeten</groupId>
+						<artifactId>threetenbp</artifactId>
+						<version>1.3.1</version>
+					</dependency>
                 </dependencies>
             </plugin>
             <plugin>
@@ -127,7 +132,7 @@
                     <testNGArtifactName>none:none</testNGArtifactName>
                     <argLine>-XX:+StartAttachListener</argLine>
                 </configuration>
-                <executions>
+                <!--<executions>
                     <execution>
                         <id>test-testng</id>
                         <phase>test</phase>
@@ -139,7 +144,7 @@
                             <testNGArtifactName>org.testng:testng</testNGArtifactName>
                         </configuration>
                     </execution>
-                </executions>
+                </executions>-->
             </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
